--- a/scss/config/variable.scss
+++ b/scss/config/variable.scss
@@ -1,7 +1,9 @@
-$max-width : 1200px;
+$max-width : 1140px;
 $gutter: 20px;  //spaces in between grids
 $finger-size: 40px;  //Ideal user's finger size in pixel
 $border-radius: 3px;
+$font-size: 16px;
+$font-size-small: .9em;
 //
 $color-navy: #083B87;
 $color-blue: #01ACEE;
