--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,10 @@
 @import "helper/global";
 //
 @import "global/header";
+@import "global/navigation";
+//
+@import "pages/index";
+
 
 body{
   height: 4000px;
