Showcase has been implemented as a layout

--- a/scss/config/variable.scss
+++ b/scss/config/variable.scss
@@ -8,6 +8,7 @@ $font-size-small: .9em;
 $color-navy: #083B87;
 $color-blue: #01ACEE;
 $color-soft-blue: #F1F6FF;
+$color-yellow: #FBBE00;
 //
 $font-family: 'Open Sans', 'Roboto', Arial, sans-serif;
 
