--- a/main.css
+++ b/main.css
@@ -500,5 +500,22 @@ a {
     margin-right: 20px;
     font-size: 0.9em; }
 
+.Showcase {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #083B87;
+  text-align: center;
+  color: white; }
+
+.Search {
+  background-color: #FBBE00;
+  padding: 40px;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3); }
+  .Search-form {
+    display: flex; }
+  .Search .asd {
+    position: absolute;
+    right: 0; }
+
 body {
   height: 4000px; }
