--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -1,3 +1,25 @@
 .Showcase {
+padding-top: 100px;
+padding-bottom: 100px;
+  background-color: $color-navy;
+  text-align: center;
+  color: white;
+}
+
+.Search {
+  background-color: $color-yellow;
+  padding: 40px;
+  box-shadow: 0 20px 40px rgba(black, .3);
+
+  &-form{
+    display: flex;
+  }
+
+  .asd{
+    position: absolute;
+    right: 0;
+  }
 
 }
+
+
