--- a/main.css
+++ b/main.css
@@ -367,6 +367,13 @@ a {
   stroke: currentColor;
   fill: currentColor; }
 
+.select, .button, .text {
+  font-family: inherit;
+  border-radius: 3px;
+  border: 0;
+  font-weight: bold;
+  background-color: #fff; }
+
 .button {
   display: inline-flex;
   align-items: center;
@@ -374,9 +381,7 @@ a {
   padding-right: 20px;
   height: 40px;
   background-color: transparent;
-  color: white;
-  border-radius: 3px;
-  font-weight: bold; }
+  color: white; }
   .button-icon {
     color: black;
     padding-left: 0;
@@ -387,8 +392,33 @@ a {
     color: white;
     background-color: #01ACEE; }
 
+.text {
+  min-height: 40px;
+  color: #083B87;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100%; }
+
+.select {
+  display: inline-block;
+  width: 100%;
+  height: 40px;
+  color: #083B87; }
+
+.form-item {
+  position: relative; }
+  .form-item .icon {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #083B87; }
+  .form-item .text {
+    padding-left: 40px; }
+  .form-item .select {
+    padding-left: 40px; }
+
 .Header {
-  border-bottom: 1px solid #ddd;
   height: 68px; }
   .Header .container {
     position: relative;
@@ -409,7 +439,7 @@ a {
     transition: 0.2s;
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     top: 100%;
@@ -425,6 +455,7 @@ a {
       margin-left: auto; }
     @media (min-width: 768px) {
       .Header-menu {
+        pointer-events: auto;
         opacity: 1;
         transform: translateY(0);
         margin-left: auto;
@@ -503,7 +534,7 @@ a {
 .Showcase {
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: #083B87;
+  background: url(img/showcase_back.jpg) no-repeat center center/cover;
   text-align: center;
   color: white; }
 
@@ -512,9 +543,10 @@ a {
   padding: 40px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3); }
   .Search-form {
-    display: flex; }
+    display: flex;
+    position: relative;
+    flex-direction: column; }
   .Search .asd {
-    position: absolute;
     right: 0; }
 
 body {
