--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -1,7 +1,8 @@
 .Showcase {
 padding-top: 100px;
 padding-bottom: 100px;
-  background-color: $color-navy;
+  background: url(img/showcase_back.jpg) no-repeat center center / cover;
+
   text-align: center;
   color: white;
 }
@@ -13,10 +14,12 @@ padding-bottom: 100px;
 
   &-form{
     display: flex;
+    position: relative;
+    flex-direction: column;
   }
 
   .asd{
-    position: absolute;
+    //position: absolute;
     right: 0;
   }
 
