--- a/scss/helper/global.scss
+++ b/scss/helper/global.scss
@@ -36,8 +36,10 @@ a {
   padding-left: 20px;
   padding-right: 20px;
   height: $finger-size;
-  background-color: transparent;
+  background-color: $color-blue;
   color: white;
+  text-align: center;
+  justify-content: center;
 
   &-icon{
     color: black;
@@ -45,10 +47,16 @@ a {
     padding-right: 0;
     width: $finger-size;
     justify-content: center;
+    background-color: transparent;
   }
-  &-blue {
-    color: white;
-    background-color: $color-blue;
+
+  &-full {
+    width: 100%;
+
+  }
+
+  &-navy  {
+    background-color: $color-navy;
   }
 }
 
@@ -60,6 +68,10 @@ a {
   padding-left: 10px;
   padding-right: 10px;
   width: 100%;
+
+  &::placeholder{
+    color: $color-navy;
+  }
 }
 
 .select {
@@ -85,4 +97,49 @@ a {
   .select {
     padding-left: 40px;
   }
+}
+
+.form-description {
+  margin-top: 5px;
+}
+
+.form-checkbox {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox {
+  position: relative;
+
+  input {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  &:before {
+    content: "";
+    display: inline-block;
+    font-size: 20px;
+    width: 1em;
+    height: 1em;
+    border: 2px solid white;
+  }
+
+  .icon {
+    display: none;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    margin-left: 2px;
+    margin-top: -4px;
+    width: 20px;
+    height: 20px;
+  }
+
+  input:checked + .icon {
+    display: inline-block;
+  }
+
 }
