--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -1,28 +1,38 @@
 .Showcase {
-padding-top: 100px;
-padding-bottom: 100px;
+  padding-top: 30px;
+  padding-bottom: 100px;
   background: url(img/showcase_back.jpg) no-repeat center center / cover;
-
-  text-align: center;
   color: white;
 }
 
 .Search {
+  margin-top: 30px;
   background-color: $color-yellow;
-  padding: 40px;
+  padding: $gutter;
   box-shadow: 0 20px 40px rgba(black, .3);
 
   &-form{
     display: flex;
     position: relative;
     flex-direction: column;
+
+    &-item {
+      & + & {
+        margin-top: 20px;
+      }
+    }
   }
 
-  .asd{
-    //position: absolute;
-    right: 0;
-  }
+  .for-work{
+    font-size: $font-size-small;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
 
+    .checkbox {
+      margin-left: 10px;
+    }
+  }
 }
 
 
