--- a/main.css
+++ b/main.css
@@ -402,14 +402,10 @@ a {
   padding-left: 10px;
   padding-right: 10px;
   width: 100%; }
-  .text::-moz-placeholder {
-    color: #083B87; }
-  .text:-ms-input-placeholder {
-    color: #083B87; }
-  .text::-ms-input-placeholder {
-    color: #083B87; }
-  .text::placeholder {
-    color: #083B87; }
+  .text::placeholder, .text::-webkit-datetime-edit {
+    color: rgba(8, 59, 135, 0.7); }
+  .text::-webkit-calendar-picker-indicator {
+    width: 2.0em; }
 
 .select {
   display: inline-block;
@@ -438,15 +434,18 @@ a {
   align-items: center; }
 
 .checkbox {
-  position: relative; }
+  position: relative;
+  display: flex; }
   .checkbox input {
     position: absolute;
     opacity: 0;
+    top: 0;
+    left: 0;
     pointer-events: none; }
   .checkbox:before {
     content: "";
     display: inline-block;
-    font-size: 20px;
+    font-size: 18px;
     width: 1em;
     height: 1em;
     border: 2px solid white; }
@@ -457,7 +456,7 @@ a {
     top: 50%;
     transform: translate(-50%, -50%);
     margin-left: 2px;
-    margin-top: -4px;
+    margin-top: -2px;
     width: 20px;
     height: 20px; }
   .checkbox input:checked + .icon {
