--- a/scss/helper/global.scss
+++ b/scss/helper/global.scss
@@ -60,7 +60,6 @@ a {
   }
 }
 
-
 //For all the textboxes
 .text {
   min-height: $finger-size;
@@ -69,9 +68,16 @@ a {
   padding-right: 10px;
   width: 100%;
 
-  &::placeholder{
-    color: $color-navy;
+  &::placeholder,
+  &::-webkit-datetime-edit
+  {
+    color: rgba($color-navy, .7);
   }
+  &::-webkit-calendar-picker-indicator {
+    //visibility: hidden;
+    width: 2.0em;
+  }
+
 }
 
 .select {
@@ -110,17 +116,20 @@ a {
 
 .checkbox {
   position: relative;
+  display: flex;
 
   input {
     position: absolute;
     opacity: 0;
+    top:0;
+    left: 0;
     pointer-events: none;
   }
 
   &:before {
     content: "";
     display: inline-block;
-    font-size: 20px;
+    font-size: 18px;
     width: 1em;
     height: 1em;
     border: 2px solid white;
@@ -133,7 +142,7 @@ a {
     top: 50%;
     transform: translate(-50%, -50%);
     margin-left: 2px;
-    margin-top: -4px;
+    margin-top: -2px;
     width: 20px;
     height: 20px;
   }
