--- a/scss/helper/global.scss
+++ b/scss/helper/global.scss
@@ -1,5 +1,10 @@
 body {
-  font-family: $font-family
+  font-family: $font-family;
+  line-height: 1.4;
+}
+
+h1,h2,h3 {
+  line-height: 1.2;
 }
 
 .container {
