--- a/main.css
+++ b/main.css
@@ -409,9 +409,12 @@ a {
   .text::placeholder, .text::-webkit-datetime-edit {
     color: rgba(8, 59, 135, 0.7); }
   .text::-webkit-calendar-picker-indicator {
-    width: 2.0em; }
+    visibility: hidden; }
 
 .select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   display: inline-block;
   width: 100%;
   height: 40px;
@@ -431,7 +434,12 @@ a {
     padding-left: 40px; }
 
 .form-description {
-  margin-top: 5px; }
+  margin-top: 4px;
+  font-size: 0.9em; }
+  @media (min-width: 768px) {
+    .form-description {
+      font-size: 16px;
+      margin-top: 20px; } }
 
 .form-checkbox {
   display: flex;
@@ -585,8 +593,18 @@ a {
   background: url(img/showcase_back.jpg) no-repeat center center/cover;
   color: white;
   text-align: center; }
+  @media (min-width: 768px) {
+    .Showcase {
+      padding-top: 80px;
+      padding-bottom: 50px; } }
+  @media (min-width: 768px) {
+    .Showcase-title {
+      font-size: 3em; } }
   .Showcase-subtitle {
-    margin-top: 10px; }
+    margin-top: 20px; }
+    @media (min-width: 768px) {
+      .Showcase-subtitle {
+        font-size: 1.2em; } }
 
 .Search {
   text-align: left;
@@ -594,12 +612,25 @@ a {
   background-color: #FBBE00;
   padding: 20px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3); }
+  @media (min-width: 768px) {
+    .Search {
+      padding: 50px 30px;
+      margin-top: 50px; } }
   .Search-form {
     display: flex;
     position: relative;
     flex-direction: column; }
+    @media (min-width: 768px) {
+      .Search-form {
+        align-items: flex-start;
+        flex-direction: row; } }
     .Search-form-item + .Search-form-item {
       margin-top: 20px; }
+      @media (min-width: 768px) {
+        .Search-form-item + .Search-form-item {
+          margin-top: 0;
+          flex-grow: 1;
+          margin-left: 10px; } }
     .Search-form-item-submit {
       display: flex;
       flex-direction: column-reverse; }
@@ -608,5 +639,9 @@ a {
     margin-bottom: 10px;
     display: flex;
     justify-content: center; }
+    @media (min-width: 768px) {
+      .Search .for-work {
+        position: absolute;
+        top: 100%; } }
     .Search .for-work .checkbox {
       margin-left: 10px; }
