--- a/scss/helper/global.scss
+++ b/scss/helper/global.scss
@@ -73,8 +73,7 @@ a {
   padding-right: 10px;
   width: 100%;
 
-  &::placeholder,
-  &::-webkit-datetime-edit
+  &::placeholder
   {
     color: rgba($color-navy, .7);
   }
@@ -99,6 +98,7 @@ a {
   }
 
   &-icon {
+    pointer-events: none;
     z-index: 1;
     position: absolute;
     right: 10px;
@@ -113,6 +113,7 @@ a {
 .form-item {
   position: relative;
   .form-item-icon {
+    pointer-events: none;
     z-index: 1;
   position: absolute;
     left: 10px;
