--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -57,6 +57,8 @@
    @include media-query {
      padding: 50px 30px;
      margin-top: 50px;
+     margin-left: 50px;
+     margin-right: 50px;
    }
 
 
