--- a/views/global/master.pug
+++ b/views/global/master.pug
@@ -1,9 +1,17 @@
-doctype html
-head
-    meta(charset='UTF-8')
-    title Title
-    meta(name='viewport' content='width=device-width, initial-scale=1')
-    link(href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap' rel='stylesheet')
-    link(rel='stylesheet' href='main.css')
-body
-    include icons
+html
+    head
+        meta(charset='UTF-8')
+        title Title
+        meta(name='viewport' content='width=device-width, initial-scale=1')
+        link(href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap' rel='stylesheet')
+        link(rel='stylesheet' href='main.css')
+    body
+        include icons
+        include header
+        include navigation
+
+        main.Main
+            block content
+
+        script(src='js/jquery-3.5.1.min.js')
+        script(src='js/main.js')
