--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -43,7 +43,30 @@
         text-decoration: underline;
       }
     }
+  }
 
+  &-store{
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+    &-link{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 50px;
+      padding-left: 20px;
+      padding-right: 20px;
+      background-color: rgba(black, 0.2);
+      margin-left: 10px;
+      margin-right: 10px;
+      border-radius: $border-radius;
+      img{
+        width: 110px;
+      }
+    }
   }
 }
 
