--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -29,15 +29,29 @@
   }
 
   &-shortlink{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
+    margin-top: 40px;
 
+     @include media-query {
+       margin-top: 60px;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+
+     }
     a {
+      display: block;
       color: inherit;
-        margin-left: 10px;
-      margin-right: 10px;
+       @include media-query {
+         margin-left: 10px;
+         margin-right: 10px;
+       }
+
+      & + a {
+        margin-top: 10px;
+         @include media-query {
+           margin-top: 0;
+         }
+      }
 
       &:hover {
         text-decoration: underline;
@@ -56,15 +70,26 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 50px;
+      height: 45px;
       padding-left: 20px;
       padding-right: 20px;
-      background-color: rgba(black, 0.2);
+      background-color: rgba(black, 0.15);
       margin-left: 10px;
       margin-right: 10px;
       border-radius: $border-radius;
+
+      @include media-query {
+        height: 50px;
+      }
+
+      &:hover{
+        background-color: rgba(black, 0.3);
+      }
       img{
-        width: 110px;
+        width: 90px;
+         @include media-query {
+              width: 110px;
+         }
       }
     }
   }
@@ -78,7 +103,7 @@
   box-shadow: 0 20px 40px rgba(black, .3);
 
    @include media-query {
-     padding: 50px 30px;
+     padding: 40px;
      margin-top: 50px;
      margin-left: 50px;
      margin-right: 50px;
