--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,9 @@
 @import "helper/formalize";
 @import "helper/global";
 //
+@import "plugin/flickity";
+
+//
 @import "global/header";
 @import "global/navigation";
 //
