--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -8,12 +8,8 @@
 
    @include media-query {
      padding-top: 80px;
-     padding-bottom: 100px;
+     padding-bottom: 170px;
    }
-
-  .container {
-
-  }
 
   &-title {
    @include media-query {
@@ -162,4 +158,23 @@
   }
 }
 
+.Highlights {
 
+  margin-bottom: 200px;
+  margin-top: -100px;
+
+  &-slider{
+
+    .flickity-viewport{
+      overflow: visible;
+    }
+
+  }
+
+  &-item{
+    width: 300px;
+    height: 200px;
+    margin-right: 30px;
+    background-color: gray;
+  }
+}
